--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,3 +47,9 @@
   border-radius: 1rem;
   margin-right: 1rem;
 }
+/* html::-webkit-scrollbar {
+  display: none;
+} */
+html,body {
+  scroll-behavior: smooth;
+}
